A new option created: saveState, which stores a selected node in sessionState, so it could be restored on next page load

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -23,6 +23,8 @@
  
       <!-- any HTML you want to be present in each test (will be reset for each test) -->
       <div id="treeview"></div>
+      <div id="treeview2"></div>
+      <div class="treeviewClass"></div>
     </div>
   </body>
 </html>
